--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/darkly/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/gh/protobi/js-xlsx@gh-pages/dist/xlsx.full.min.js"></script>
+    <!-- 修正：改回 SheetJS 官方版本 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -1034,6 +1035,16 @@
                 total += woodworkHardware;
             }
 
+            const systemTotal = (() => {
+                let sum = 0;
+                ['nightstand','wall_cabinet_door','wall_cabinet_no_door','tall_cabinet_no_drawer','tall_cabinet_with_drawer','wardrobe_door_60cm','wardrobe_slide_60cm','appliance_cabinet','desk','low_cabinet_no_drawer','low_cabinet_with_drawer','tv_cabinet','system_wall_panel'].forEach(id=>{
+                    const map = {nightstand:6000,wall_cabinet_door:5500,wall_cabinet_no_door:5000,tall_cabinet_no_drawer:7500,tall_cabinet_with_drawer:8000,wardrobe_door_60cm:8500,wardrobe_slide_60cm:9000,appliance_cabinet:8000,desk:6000,low_cabinet_no_drawer:6000,low_cabinet_with_drawer:7000,tv_cabinet:4000,system_wall_panel:3000};
+                    const v = parseFloat(document.getElementById(id).value) || 0;
+                    sum += v * map[id];
+                });
+                return sum;
+            })();
+
             const systemHardware = systemTotal * 0.05;
             const systemShipping = systemTotal * 0.05;
             const systemAssembly = systemTotal * 0.20;
@@ -1208,7 +1219,7 @@
                 spDesc = `星光 - 基數7000+(${basePing}-12)*600`;
             } else if (sp === 'risna') {
                 spPrice = 9000 + (basePing - 12) * 700;
-            spDesc = `Risna - 基數9000+(${basePing}-12)*700`;
+                spDesc = `Risna - 基數9000+(${basePing}-12)*700`;
             }
             if (spPrice > 0) items.push(['開關面板', '開關面板', 1, spDesc, spPrice]);
         
