--- a/index.html
+++ b/index.html
@@ -666,6 +666,9 @@
                 <button type="button" class="btn btn-success btn-lg" onclick="exportToExcel()">
                   <i class="fas fa-download me-2"></i>匯出 Excel 報價單
                 </button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="saveQuote()">
+                  <i class="fas fa-cloud-upload-alt me-2"></i>儲存到資料庫
+                </button>
               </div>
             </div>
           </div>
