--- a/index.html
+++ b/index.html
@@ -1267,5 +1267,70 @@
     window.calculatePricing = calculatePricing;
     window.exportToExcel = exportToExcel;
   </script>
+  <script>
+// 將 "NT$ 1,234" 之類字串 -> 數字
+function _parseMoney(s){ return Number(String(s||'').replace(/[^\d.-]/g,'')) || 0; }
+
+// 收集整張表單的原始輸入（方便備查/還原）
+function _collectRawForm(){
+  const obj = {};
+  document.querySelectorAll('#quotationForm input, #quotationForm select').forEach(el=>{
+    if(!el.id) return;
+    if(el.type === 'checkbox') obj[el.id] = !!el.checked;
+    else obj[el.id] = el.value;
+  });
+  return obj;
+}
+
+async function saveQuote(){
+  try{
+    // 確保金額是最新
+    calculatePricing();
+
+    // 主要欄位
+    const style = getStyleValue();        // 你原本已實作
+    const room  = getRoomTypeValue();     // 你原本已實作
+    const raw   = _collectRawForm();
+
+    // 直接從畫面抓三個自動欄位與總價（你的程式已經計算好）
+    const other10 = _parseMoney(document.getElementById('other_items').value);
+    const supervise8 = _parseMoney(document.getElementById('supervision_fee').value);
+    const tax5 = _parseMoney(document.getElementById('tax').value);
+    const grand = _parseMoney(document.getElementById('total-price').textContent);
+
+    const quote = {
+      quote_date: raw['date'] || null,
+      client_name: raw['client_name'] || null,
+      address: raw['address'] || null,
+      style: style || null,
+      room_type: room || null,
+      base_ping: parseFloat(raw['base_ping']) || null,
+      subtotal: Math.max(0, grand - other10 - supervise8 - tax5),  // 近似：扣掉三個加成
+      other_items: other10,
+      supervision_fee: supervise8,
+      tax: tax5,
+      grand_total: grand,
+      form: raw
+    };
+
+    // 先不送明細；之後要再加 quote_items 我們再擴充
+    const payload = { quote, items: [] };
+
+    const resp = await fetch('/api/save-quote', {
+      method: 'POST',
+      headers: {'Content-Type':'application/json'},
+      body: JSON.stringify(payload)
+    });
+    const data = await resp.json();
+    if(!resp.ok){
+      throw new Error(data?.error || '儲存失敗');
+    }
+    alert('已儲存成功！編號：' + data.id);
+  }catch(err){
+    console.error(err);
+    alert('儲存失敗：' + (err.message || err));
+  }
+}
+</script>
 </body>
 </html>
