--- a/history.html
+++ b/history.html
@@ -109,149 +109,136 @@
   </div>
 </div>
 
-<!-- 詳情 Modal -->
+<!-- 詳情 Modal（整段替換） -->
 <div class="modal fade" id="detailModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+  <div class="modal-dialog modal-xl modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">報價詳情</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
       </div>
       <div class="modal-body">
-        <pre id="detailPre" class="mb-0" style="white-space:pre-wrap;"></pre>
+        <ul class="nav nav-tabs mb-3" role="tablist">
+          <li class="nav-item">
+            <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#tab-base" type="button" role="tab">基本資料</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-items" type="button" role="tab">明細</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-form" type="button" role="tab">原始表單 JSON</button>
+          </li>
+        </ul>
+
+        <div class="tab-content">
+          <div class="tab-pane fade show active" id="tab-base" role="tabpanel">
+            <div id="detailBase" class="row g-3"></div>
+          </div>
+
+          <div class="tab-pane fade" id="tab-items" role="tabpanel">
+            <div class="table-responsive">
+              <table class="table table-sm table-hover align-middle">
+                <thead class="table-dark">
+                  <tr>
+                    <th>分類</th>
+                    <th>項目</th>
+                    <th class="text-end">數量</th>
+                    <th>單位</th>
+                    <th class="text-end">單價</th>
+                    <th class="text-end">金額</th>
+                  </tr>
+                </thead>
+                <tbody id="detailItemsBody">
+                  <tr><td colspan="6" class="text-muted text-center">無明細</td></tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <th colspan="5" class="text-end">小計</th>
+                    <th class="text-end" id="itemsSubtotal">NT$ 0</th>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+          </div>
+
+          <div class="tab-pane fade" id="tab-form" role="tabpanel">
+            <pre id="detailForm" class="mb-0" style="white-space:pre-wrap;"></pre>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  const state = { page: 1, limit: 20, lastResp: null, lastQuery: {} };
-
-  function nt(n){ return (n ?? 0).toLocaleString('zh-TW', {maximumFractionDigits: 0}); }
-  function fmtMoney(n){ return 'NT$ ' + nt(Math.round(Number(n)||0)); }
-  function fmtDate(s){ if(!s) return ''; return String(s).slice(0,10); }
-
-  function collectQuery(){
-    const q = {
-      style: document.getElementById('style').value.trim(),
-      room_type: document.getElementById('room_type').value.trim(),
-      ping_min: document.getElementById('ping_min').value.trim(),
-      ping_max: document.getElementById('ping_max').value.trim(),
-      from: document.getElementById('from').value.trim(),
-      to: document.getElementById('to').value.trim(),
-      page: state.page,
-      limit: state.limit
-    };
-    // 清掉空字串
-    Object.keys(q).forEach(k => { if(q[k] === '') delete q[k]; });
-    return q;
-  }
-
-  async function search(page=1){
-    state.page = page;
-    const q = state.lastQuery = collectQuery();
-    const sp = new URLSearchParams(q);
-    const resp = await fetch('/api/search-quotes?' + sp.toString());
-    const data = await resp.json();
-    state.lastResp = data;
-    render(data);
-  }
-
-  function render(resp){
-    const tbody = document.getElementById('tbody');
-    if(!resp || !Array.isArray(resp.items) || resp.items.length === 0){
-      tbody.innerHTML = '<tr><td colspan="7" class="text-center text-muted py-4">沒有符合條件的資料</td></tr>';
-      document.getElementById('summary').textContent = '共 0 筆';
-      return;
-    }
-    const rows = resp.items.map(r => `
-      <tr>
-        <td>${fmtDate(r.quote_date || r.created_at)}</td>
-        <td>${r.client_name ?? ''}</td>
-        <td>${r.style ?? ''}</td>
-        <td>${r.room_type ?? ''}</td>
-        <td class="text-end">${r.base_ping ?? ''}</td>
-        <td class="text-end">${fmtMoney(r.grand_total)}</td>
-        <td>
-          <button class="btn btn-sm btn-outline-info" data-id="${r.id}" onclick="showDetail('${r.id}')">
-            <i class="fa-solid fa-eye me-1"></i>查看
-          </button>
-        </td>
-      </tr>
-    `).join('');
-    tbody.innerHTML = rows;
-
-    const totalTxt = (resp.total != null)
-      ? `共 ${resp.total.toLocaleString()} 筆，頁 ${resp.page}`
-      : `頁 ${resp.page}`;
-    document.getElementById('summary').textContent = totalTxt;
-
-    document.getElementById('prev').disabled = (resp.page <= 1);
-    document.getElementById('next').disabled = (resp.hasNext === false);
-  }
+  function _fmtMoney(n){ return 'NT$ ' + (Math.round(Number(n)||0)).toLocaleString('zh-TW'); }
+  function _fmtDate(s){ return s ? String(s).slice(0,10) : ''; }
 
   async function showDetail(id){
-    // 取這一筆的完整資料（包含 form JSON），再次查詢一次單筆
-    const sp = new URLSearchParams({ id: `eq.${id}`, select: '*' });
-    const resp = await fetch('/api/search-quotes?' + sp.toString()); // 後端會忽略未知參數；我們另外做簡單單筆查
-    // 簡化：直接從 lastResp 找
-    const r = (state.lastResp?.items || []).find(x => x.id === id);
-    let text = '';
-    if (r) {
-      text += `日期：${fmtDate(r.quote_date || r.created_at)}\n`;
-      text += `客戶：${r.client_name ?? ''}\n`;
-      text += `風格：${r.style ?? ''}\n房型：${r.room_type ?? ''}\n坪數：${r.base_ping ?? ''}\n`;
-      text += `總價：${fmtMoney(r.grand_total)}\n\n`;
-      // form 目前不在搜尋結果內，如要顯示可改 API select 回傳 form；先顯示基本欄位
-      text += '（如需顯示完整表單內容，我可以幫你把 API 加上 form 欄位）';
-    } else {
-      text = '找不到資料';
+    try{
+      const resp = await fetch('/api/quote-detail?id=' + encodeURIComponent(id));
+      const row = await resp.json();
+      if(!resp.ok) throw new Error(row?.error || '取得詳情失敗');
+
+      // ===== 基本資料 =====
+      const base = [
+        { label:'日期', value: _fmtDate(row.quote_date || row.created_at) },
+        { label:'客戶', value: row.client_name || '' },
+        { label:'地址', value: row.address || '' },
+        { label:'風格', value: row.style || '' },
+        { label:'房型', value: row.room_type || '' },
+        { label:'坪數', value: row.base_ping ?? '' },
+        { label:'小計', value: _fmtMoney(row.subtotal) },
+        { label:'其他項目(10%)', value: _fmtMoney(row.other_items) },
+        { label:'監工費(8%)', value: _fmtMoney(row.supervision_fee) },
+        { label:'稅額(5%)', value: _fmtMoney(row.tax) },
+        { label:'總價', value: _fmtMoney(row.grand_total) },
+        { label:'編號', value: row.id }
+      ];
+      document.getElementById('detailBase').innerHTML = base.map(b => `
+        <div class="col-md-4">
+          <div class="p-2 border rounded">
+            <div class="text-muted small">${b.label}</div>
+            <div class="fw-semibold">${b.value ?? ''}</div>
+          </div>
+        </div>
+      `).join('');
+
+      // ===== 明細 =====
+      const items = Array.isArray(row.quote_items) ? row.quote_items : [];
+      if(items.length === 0){
+        document.getElementById('detailItemsBody').innerHTML =
+          '<tr><td colspan="6" class="text-muted text-center">無明細</td></tr>';
+        document.getElementById('itemsSubtotal').textContent = 'NT$ 0';
+      }else{
+        let sub = 0;
+        document.getElementById('detailItemsBody').innerHTML = items.map(it=>{
+          sub += Number(it.amount)||0;
+          return `
+            <tr>
+              <td>${it.category ?? ''}</td>
+              <td>${it.name ?? ''}</td>
+              <td class="text-end">${it.qty ?? ''}</td>
+              <td>${it.unit ?? ''}</td>
+              <td class="text-end">${_fmtMoney(it.unit_price)}</td>
+              <td class="text-end">${_fmtMoney(it.amount)}</td>
+            </tr>`;
+        }).join('');
+        document.getElementById('itemsSubtotal').textContent = _fmtMoney(sub);
+      }
+
+      // ===== 原始表單 JSON =====
+      document.getElementById('detailForm').textContent =
+        JSON.stringify(row.form || {}, null, 2);
+
+      new bootstrap.Modal(document.getElementById('detailModal')).show();
+    }catch(err){
+      console.error(err);
+      alert(err.message || err);
     }
-    document.getElementById('detailPre').textContent = text;
-    new bootstrap.Modal(document.getElementById('detailModal')).show();
   }
-
-  // 匯出目前頁面結果為 Excel
-  function exportExcel(){
-    const items = state?.lastResp?.items || [];
-    if(items.length === 0){ alert('沒有可匯出的資料'); return; }
-
-    const rows = [
-      ['日期','客戶','風格','房型','坪數','總價','ID']
-    ];
-    items.forEach(r=>{
-      rows.push([
-        fmtDate(r.quote_date || r.created_at),
-        r.client_name || '',
-        r.style || '',
-        r.room_type || '',
-        r.base_ping ?? '',
-        Math.round(Number(r.grand_total)||0),
-        r.id
-      ]);
-    });
-
-    const wb = XLSX.utils.book_new();
-    const ws = XLSX.utils.aoa_to_sheet(rows);
-    XLSX.utils.book_append_sheet(wb, ws, '歷史報價');
-    const ts = new Date().toISOString().replace(/[-:T]/g,'').slice(0,12);
-    XLSX.writeFile(wb, `歷史報價_${ts}.xlsx`);
-  }
-
-  // 事件
-  document.getElementById('btnSearch').addEventListener('click', ()=>search(1));
-  document.getElementById('btnReset').addEventListener('click', ()=>{
-    document.getElementById('filterForm').reset();
-    state.page = 1;
-    search(1);
-  });
-  document.getElementById('btnExport').addEventListener('click', exportExcel);
-  document.getElementById('prev').addEventListener('click', ()=> search(Math.max(1, state.page-1)));
-  document.getElementById('next').addEventListener('click', ()=> search(state.page+1));
-
-  // 預設載入
-  search(1);
 </script>
 </body>
 </html>
