--- a/public/history.html
+++ b/public/history.html
@@ -1,3 +1,179 @@
+<!DOCTYPE html>
+<html lang="zh-TW" data-bs-theme="dark">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>歷史報價查詢</title>
+  <meta name="robots" content="noindex,nofollow"/>
+
+  <!-- 样式 / Icon -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/darkly/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
+  <!-- 匯出 Excel 用 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+  <style>
+    .card { border: none; box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,.075); }
+    .table td, .table th { vertical-align: middle; }
+  </style>
+</head>
+<body>
+<div class="container py-4">
+  <div class="d-flex align-items-center justify-content-between mb-3">
+    <h2 class="mb-0"><i class="fa-solid fa-magnifying-glass me-2"></i>歷史報價查詢</h2>
+    <div>
+      <a href="./index.html" class="btn btn-outline-light btn-sm"><i class="fa-solid fa-arrow-left me-1"></i>返回報價</a>
+    </div>
+  </div>
+
+  <!-- 篩選條件 -->
+  <div class="card mb-4">
+    <div class="card-body">
+      <form id="filterForm" class="row g-3">
+        <div class="col-md-3">
+          <label class="form-label">風格</label>
+          <select id="style" class="form-select">
+            <option value="">全部</option>
+            <option>簡約</option><option>北歐</option><option>清奢</option>
+            <option>古典</option><option>美式</option><option>現代</option>
+            <option>日式</option><option>無印</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">房型</label>
+          <select id="room_type" class="form-select">
+            <option value="">全部</option>
+            <option>一房一廳一衛</option>
+            <option>兩房一廳一衛</option>
+            <option>兩房兩廳兩衛</option>
+            <option>三房一廳一衛</option>
+            <option>三房兩廳兩衛</option>
+            <option>三房兩廳三衛</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">坪數（最小）</label>
+          <input id="ping_min" type="number" class="form-control" min="0" step="0.1" placeholder="例如 18"/>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">坪數（最大）</label>
+          <input id="ping_max" type="number" class="form-control" min="0" step="0.1" placeholder="例如 28"/>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">日期（起）</label>
+          <input id="from" type="date" class="form-control"/>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">日期（迄）</label>
+          <input id="to" type="date" class="form-control"/>
+        </div>
+        <div class="col-md-6 d-flex align-items-end justify-content-end">
+          <div class="btn-group">
+            <button type="button" class="btn btn-primary" id="btnSearch"><i class="fa-solid fa-search me-1"></i>查詢</button>
+            <button type="button" class="btn btn-secondary" id="btnReset"><i class="fa-solid fa-rotate-left me-1"></i>重設</button>
+            <button type="button" class="btn btn-success" id="btnExport"><i class="fa-solid fa-file-excel me-1"></i>匯出 Excel</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- 統計 / 分頁 -->
+  <div class="d-flex justify-content-between align-items-center mb-2">
+    <div id="summary" class="text-muted">共 0 筆</div>
+    <div class="btn-group">
+      <button id="prev" class="btn btn-outline-light btn-sm"><i class="fa-solid fa-angle-left"></i></button>
+      <button id="next" class="btn btn-outline-light btn-sm"><i class="fa-solid fa-angle-right"></i></button>
+    </div>
+  </div>
+
+  <!-- 結果表 -->
+  <div class="card">
+    <div class="table-responsive">
+      <table class="table table-hover mb-0">
+        <thead class="table-dark">
+          <tr>
+            <th>日期</th>
+            <th>客戶</th>
+            <th>風格</th>
+            <th>房型</th>
+            <th class="text-end">坪數</th>
+            <th class="text-end">總價</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody id="tbody">
+          <tr><td colspan="7" class="text-center text-muted py-4">尚無資料</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<!-- 詳情 Modal -->
+<div class="modal fade" id="detailModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">報價詳情</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="nav nav-tabs mb-3" role="tablist">
+          <li class="nav-item">
+            <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#tab-base" type="button" role="tab">基本資料</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-items" type="button" role="tab">明細</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-form" type="button" role="tab">原始表單 JSON</button>
+          </li>
+        </ul>
+
+        <div class="tab-content">
+          <div class="tab-pane fade show active" id="tab-base" role="tabpanel">
+            <div id="detailBase" class="row g-3"></div>
+          </div>
+
+          <div class="tab-pane fade" id="tab-items" role="tabpanel">
+            <div class="table-responsive">
+              <table class="table table-sm table-hover align-middle">
+                <thead class="table-dark">
+                  <tr>
+                    <th>分類</th>
+                    <th>項目</th>
+                    <th class="text-end">數量</th>
+                    <th>單位</th>
+                    <th class="text-end">單價</th>
+                    <th class="text-end">金額</th>
+                  </tr>
+                </thead>
+                <tbody id="detailItemsBody">
+                  <tr><td colspan="6" class="text-muted text-center">無明細</td></tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <th colspan="5" class="text-end">小計</th>
+                    <th class="text-end" id="itemsSubtotal">NT$ 0</th>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+          </div>
+
+          <div class="tab-pane fade" id="tab-form" role="tabpanel">
+            <pre id="detailForm" class="mb-0" style="white-space:pre-wrap;"></pre>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   // --- 狀態與小工具 ---
   const state = { page: 1, limit: 20, lastResp: null, lastQuery: {} };
@@ -7,27 +183,22 @@
   function fmtMoney(n){ return 'NT$ ' + nt(Math.round(Number(n)||0)); }
   function fmtDate(s){ return s ? String(s).slice(0,10) : ''; }
 
-  // 👉 統一打 API：若遇到 401（Basic Auth），自動再重試一次
+  // 👉 統一打 API（支援 Basic Auth 第二次重試）
   async function apiGetJson(url, init = {}) {
     let resp = await fetch(url, { cache: 'no-store', ...init });
-    if (resp.status === 401) {
-      // 有些瀏覽器需要在該路徑先被 challenge 一次才會帶 Authorization
-      resp = await fetch(url, { cache: 'no-store', ...init });
-    }
+    if (resp.status === 401) resp = await fetch(url, { cache: 'no-store', ...init });
     const text = await resp.text();
-    if (!resp.ok) throw new Error(`HTTP ${resp.status} ${text || ''}`);
+    if (!resp.ok) throw new Error(\`HTTP \${resp.status} \${text || ''}\`);
     try { return JSON.parse(text); } catch { return text; }
   }
 
-  // UI：顯示讀取中
   function setLoading(msg = '讀取中…') {
-    $('#tbody').innerHTML = `<tr><td colspan="7" class="text-center text-muted py-4">${msg}</td></tr>`;
+    $('#tbody').innerHTML = \`<tr><td colspan="7" class="text-center text-muted py-4">\${msg}</td></tr>\`;
     $('#summary').textContent = '';
     $('#prev').disabled = true;
     $('#next').disabled = true;
   }
 
-  // 收集查詢條件
   function collectQuery(){
     const q = {
       style: $('#style').value.trim(),
@@ -43,7 +214,6 @@
     return q;
   }
 
-  // 打 API 搜尋
   async function search(page = 1){
     state.page = page;
     setLoading();
@@ -56,12 +226,11 @@
     }catch(err){
       console.error(err);
       $('#tbody').innerHTML =
-        `<tr><td colspan="7" class="text-center text-danger py-4">查詢失敗：${err.message || err}</td></tr>`;
+        \`<tr><td colspan="7" class="text-center text-danger py-4">查詢失敗：\${err.message || err}</td></tr>\`;
       $('#summary').textContent = '共 0 筆';
     }
   }
 
-  // 渲染表格
   function render(resp){
     const tbody = $('#tbody');
     if(!resp || !Array.isArray(resp.items) || resp.items.length === 0){
@@ -72,32 +241,31 @@
       return;
     }
 
-    tbody.innerHTML = resp.items.map(r => `
+    tbody.innerHTML = resp.items.map(r => \`
       <tr>
-        <td>${fmtDate(r.quote_date || r.created_at)}</td>
-        <td>${r.client_name ?? ''}</td>
-        <td>${r.style ?? ''}</td>
-        <td>${r.room_type ?? ''}</td>
-        <td class="text-end">${r.base_ping ?? ''}</td>
-        <td class="text-end">${fmtMoney(r.grand_total)}</td>
+        <td>\${fmtDate(r.quote_date || r.created_at)}</td>
+        <td>\${r.client_name ?? ''}</td>
+        <td>\${r.style ?? ''}</td>
+        <td>\${r.room_type ?? ''}</td>
+        <td class="text-end">\${r.base_ping ?? ''}</td>
+        <td class="text-end">\${fmtMoney(r.grand_total)}</td>
         <td>
-          <button class="btn btn-sm btn-outline-info" onclick="showDetail('${r.id}')">
+          <button class="btn btn-sm btn-outline-info" onclick="showDetail('\${r.id}')">
             <i class="fa-solid fa-eye me-1"></i>查看
           </button>
         </td>
-      </tr>
-    `).join('');
+      </tr>\`
+    ).join('');
 
     const totalTxt = (resp.total != null)
-      ? `共 ${resp.total.toLocaleString()} 筆，頁 ${resp.page}`
-      : `頁 ${resp.page}`;
+      ? \`共 \${resp.total.toLocaleString()} 筆，頁 \${resp.page}\`
+      : \`頁 \${resp.page}\`;
     $('#summary').textContent = totalTxt;
 
     $('#prev').disabled = (resp.page <= 1);
     $('#next').disabled = (resp.hasNext === false);
   }
 
-  // 匯出目前頁面結果為 Excel
   function exportExcel(){
     const items = state?.lastResp?.items || [];
     if(items.length === 0){ alert('沒有可匯出的資料'); return; }
@@ -117,15 +285,13 @@
     const ws = XLSX.utils.aoa_to_sheet(rows);
     XLSX.utils.book_append_sheet(wb, ws, '歷史報價');
     const ts = new Date().toISOString().replace(/[-:T]/g,'').slice(0,12);
-    XLSX.writeFile(wb, `歷史報價_${ts}.xlsx`);
+    XLSX.writeFile(wb, \`歷史報價_\${ts}.xlsx\`);
   }
 
-  // 單筆詳情（含 quote_items 與 form）
   async function showDetail(id){
     try{
       const row = await apiGetJson('/api/quote-detail?id=' + encodeURIComponent(id));
 
-      // 基本資料
       const base = [
         { label:'日期', value: fmtDate(row.quote_date || row.created_at) },
         { label:'客戶', value: row.client_name || '' },
@@ -140,15 +306,14 @@
         { label:'總價', value: fmtMoney(row.grand_total) },
         { label:'編號', value: row.id }
       ];
-      $('#detailBase').innerHTML = base.map(b => `
+      $('#detailBase').innerHTML = base.map(b => \`
         <div class="col-md-4">
           <div class="p-2 border rounded">
-            <div class="text-muted small">${b.label}</div>
-            <div class="fw-semibold">${b.value ?? ''}</div>
+            <div class="text-muted small">\${b.label}</div>
+            <div class="fw-semibold">\${b.value ?? ''}</div>
           </div>
-        </div>`).join('');
+        </div>\`).join('');
 
-      // 明細
       const items = Array.isArray(row.quote_items) ? row.quote_items : [];
       if(items.length === 0){
         $('#detailItemsBody').innerHTML =
@@ -158,20 +323,19 @@
         let sub = 0;
         $('#detailItemsBody').innerHTML = items.map(it=>{
           sub += Number(it.amount)||0;
-          return `
+          return \`
             <tr>
-              <td>${it.category ?? ''}</td>
-              <td>${it.name ?? ''}</td>
-              <td class="text-end">${it.qty ?? ''}</td>
-              <td>${it.unit ?? ''}</td>
-              <td class="text-end">${fmtMoney(it.unit_price)}</td>
-              <td class="text-end">${fmtMoney(it.amount)}</td>
-            </tr>`;
+              <td>\${it.category ?? ''}</td>
+              <td>\${it.name ?? ''}</td>
+              <td class="text-end">\${it.qty ?? ''}</td>
+              <td>\${it.unit ?? ''}</td>
+              <td class="text-end">\${fmtMoney(it.unit_price)}</td>
+              <td class="text-end">\${fmtMoney(it.amount)}</td>
+            </tr>\`;
         }).join('');
         $('#itemsSubtotal').textContent = fmtMoney(sub);
       }
 
-      // 原始表單 JSON
       $('#detailForm').textContent = JSON.stringify(row.form || {}, null, 2);
 
       new bootstrap.Modal($('#detailModal')).show();
@@ -181,17 +345,21 @@
     }
   }
 
-  // 事件與初始化
-  $('#btnSearch').addEventListener('click', ()=>search(1));
-  $('#btnReset').addEventListener('click', ()=>{
-    $('#filterForm').reset();
-    state.page = 1;
+  // 綁事件（等 DOM 渲染完成）
+  document.addEventListener('DOMContentLoaded', () => {
+    $('#btnSearch').addEventListener('click', ()=>search(1));
+    $('#btnReset').addEventListener('click', ()=>{
+      $('#filterForm').reset();
+      state.page = 1;
+      search(1);
+    });
+    $('#btnExport').addEventListener('click', exportExcel);
+    $('#prev').addEventListener('click', ()=> search(Math.max(1, state.page-1)));
+    $('#next').addEventListener('click', ()=> search(state.page+1));
+
+    // 首次載入就查一次
     search(1);
   });
-  $('#btnExport').addEventListener('click', exportExcel);
-  $('#prev').addEventListener('click', ()=> search(Math.max(1, state.page-1)));
-  $('#next').addEventListener('click', ()=> search(state.page+1));
-
-  // 頁面載入就查一次
-  document.addEventListener('DOMContentLoaded', () => search(1));
 </script>
+</body>
+</html>
